Fix phone overflow 4

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -23,6 +23,8 @@ html {
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 body {
@@ -183,6 +185,9 @@ body .arcs {
   /*height: 100vh;*/
   width: 100%;
   overflow: hidden;
+  position: fixed;
+  left: 0;
+  right: 0;
 
   background-color: var(--grey-light-color);
   min-height: 100vh;
